# hal_ethos_u

./: CMakeLists.txt  README.md  SECURITY.md
ethosu_pmu/: CMakeLists.txt  common.h  driver.c  ethosu_pmu_config.h.in
ethosu_pmu/include/: pmu_ethosu.h
include/: ethosu_device.h  ethosu_driver.h  pmu_ethosu.h
src/: ethosu55_interface.h  ethosu65_interface.h  ethosu_common.h  ethosu_config.h  ethosu_config.h.in  ethosu_config_u85.h  ethosu_device.c  ethosu_device.h  ethosu_device_u55.c  ethosu_device_u55_u65.c  ethosu_device_u85.c  ethosu_driver.c  ethosu_log.h  ethosu_pmu.c  irq_driver.h
zephyr/: CMakeLists.txt  Kconfig  init.c  module.yml
